--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -5,7 +5,7 @@ keyboard us
 timezone UTC
 network --bootproto=dhcp
 rootpw  packer
-user --name=vagrant --plaintext --password=vagrant
+user --name=vagrant --plaintext --homedir=/home/vagrant  --password=vagrant
 auth --enableshadow --passalgo=sha512 --kickstart
 firewall --disabled
 selinux --permissive
