--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -1,30 +1,61 @@
 install
 cdrom
+
 lang en_US.UTF-8
 keyboard us
 timezone UTC
-network --bootproto=dhcp
-rootpw  packer
-user --name=vagrant --plaintext --homedir=/home/vagrant  --password=vagrant
-auth --enableshadow --passalgo=sha512 --kickstart
-firewall --disabled
-selinux --permissive
-bootloader --location=mbr
 
+network --onboot yes --bootproto=dhcp --device=eth0 --activate --noipv6
+
+rootpw vagrant
+authconfig --enableshadow --passalgo=sha512
+user --name=vagrant --groups=vagrant --password=vagrant
+
+firewall --disabled
+selinux --disabled
+firstboot --disabled
+
+# Old cool eth0/eth1/... -> "net.ifnames=0 biosdevname=0"
+bootloader --location=mbr --append="ipv6.disable=1 net.ifnames=0 biosdevname=0"
 text
 skipx
-zerombr
 
+logging --level=info
+zerombr
 clearpart --all --initlabel
 autopart
 
-firstboot --disable
 reboot
 
-%packages --instLangs=en_US.utf8 --nobase --ignoremissing --excludedocs
-@core
+%packages --nobase
+@Core
+openssh-clients
+openssh-server
+mc
 %end
 
-%post --log=/root/ks.log
-yum -y update
+%post --log=/root/post_install.log
+
+# Add vagrant to sudoers
+cat > /etc/sudoers.d/vagrant << EOF_sudoers_vagrant
+vagrant        ALL=(ALL)       NOPASSWD: ALL
+EOF_sudoers_vagrant
+
+/bin/chmod 0440 /etc/sudoers.d/vagrant
+/bin/sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
+
+# Fix sshd config for CentOS 7 1611 (reboot issue)
+cat << EOF_sshd_config >> /etc/ssh/sshd_config
+
+TCPKeepAlive yes
+ClientAliveInterval 0
+ClientAliveCountMax 3
+
+UseDNS no
+UsePAM no
+GSSAPIAuthentication no
+ChallengeResponseAuthentication no
+
+EOF_sshd_config
+
 %end
